--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -22,6 +22,7 @@
             </tr>
         </thead>
         <tbody>
+          <!-- write the line of EJS to iterate over flights using forEach -->
             <% flights.forEach(f => { %>
              <tr>
                 <td><%= f.airline %> </td>
