Working on Tickets

--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -64,7 +64,7 @@
           </tbody>
         </table>
       <% } else { %>
-        <h5>No Destination Details Yet</h5>
+        <h2>No Destination Details</h2>
       <% } %>
 
       </div>
@@ -72,8 +72,6 @@
     </section>
       
     <br>
-
       <a href="/flights">Return to All Flights</a>
-
 </body>
 </html>
