--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,6 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class="directory">
@@ -12,8 +11,8 @@
     </nav>
     <section class="intro">
     <h1 id="express-title"><%= title %> Lab</h1>
-    <h1 id="welcome-msg">Gabriel's International Airport</h1>
-    <p id="flights-intro">Welcome! In this lab, you can use the navigation bar above to view all upcoming and past flights, as well as add new and incoming flights. For all posted flights, click the Details button to view more details about the flight itself, including destination information. Safe travels!</p>
+    <h1 id="welcome-msg"></h1>
+    <p id="flights-intro"></p>
     </section>
 
   </body>
