--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -63,12 +63,9 @@
       <% } else { %>
         <h2>No Destination Details</h2>
       <% } %>
-
       </div>
-
-    </section>
-      
+    </section> 
     <br>
-      <a href="/flights">Return to All Flights</a>
+      <a href="/flights">Back to All Flights</a>
 </body>
 </html>
